--- a/fetch/package.json
+++ b/fetch/package.json
@@ -7,16 +7,20 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "preview": "vite preview"
-  },
+    },
     "dependencies": {
+        "axios": "^1.3.5",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
-  },
+        "react-dom": "^18.2.0",
+        "react-query": "^3.39.3"
+    },
     "devDependencies": {
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
         "@vitejs/plugin-react": "^3.1.0",
+        "@types/axios": "^0.14.0",
+        "@types/react-query": "^1.2.9",
         "typescript": "^4.9.3",
         "vite": "^4.1.0"
-  }
+    }
 }
